2008-03-29  Brian Warner  <warner@lothar.com>

	* buildbot/changes/svnpoller.py (SVNPoller.create_changes): pass
	revision as a string, not an int. This fixes a problem in
	MailNotifier, which expects a string. Thanks to Dan Locks for the
	patch, and Dustin Mitchell for the test fixups. Closes #208.
	* buildbot/steps/source.py (Source.commandComplete): treat
	got_revision as a string too.
	* buildbot/test/test_svnpoller.py: update test to match
	* buildbot/test/test_vc.py: same

2008-03-27  Brian Warner  <warner@lothar.com>

	* buildbot/scripts/runner.py (doCheckConfig): patch from Ben
	Hearsum to implement 'buildbot checkconfig': validate that your
	master.cfg is good without actually touching the buildmaster.
	Closes #37. Thanks!
	* buildbot/scripts/checkconfig.py: same
	* docs/buildbot.texinfo (Testing the Config File): document it

2008-03-22  Brian Warner  <warner@lothar.com>

	* buildbot/test/test_vc.py (Mercurial.serveHTTP): another attempt
	to make Mercurial.testCheckoutHTTP not fail on heavily loaded
	machines: avoid overlapping poll() calls.

	* NEWS: preliminary list of changes for the upcoming release.
	Needs editing and explanations.

	* buildbot/status/web/base.py (make_stop_form): add a label=
	argument so that the button says "Stop Builds" or "Stop Build" as
	appropriate. It used to say "Stop Builder", which was wrong.
	* buildbot/status/web/baseweb.py (OneLinePerBuild.body): same
	(OneBoxPerBuilder.body): same

	* buildbot/process/builder.py (Builder): use self.old_building to
	track Builds from a previous version of this Builder and are still
	running. This makes it possible for IBuilderControl to get at
	them, allowing the "Stop Build" button to work after a
	Builder-replacing reconfig. Closes #22.
	(Builder.consumeTheSoulOfYourPredecessor): grab weakrefs from the
	old Builder's self.building attribute, instead of strongrefs,
	since there's no good place to explicitly forget about them.
	(Builder.getBuild): factor this out of BuilderControl
